add new option names

--- a/extension/options/index.html
+++ b/extension/options/index.html
@@ -40,15 +40,15 @@
   <h2 class="section-header">Navigation</h2>
   <div class="option">
     <h3>When clicking on a package formula</h3>
-    <label><input type="radio" name="page_search" value="always"> Open formula page in a new tab</label>
-    <label><input type="radio" name="page_search" value="manually"> Open formula in current tab</label>
-    <label><input type="radio" name="page_search" value="never"> Do nothing</label>
+    <label><input type="radio" name="formula_click_action" value="newtab"> Open formula page in a new tab</label>
+    <label><input type="radio" name="formula_click_action" value="current"> Open formula in current tab</label>
+    <label><input type="radio" name="formula_click_action" value="nothing"> Do nothing</label>
   </div>
   <div class="option">
     <h3>When clicking on a package name</h3>
-    <label><input type="radio" name="page_search" value="always"> Open package website in a new tab</label>
-    <label><input type="radio" name="page_search" value="manually"> Open package website in current tab</label>
-    <label><input type="radio" name="page_search" value="never"> Do nothing</label>
+    <label><input type="radio" name="name_click_action" value="newtab"> Open package website in a new tab</label>
+    <label><input type="radio" name="name_click_action" value="current"> Open package website in current tab</label>
+    <label><input type="radio" name="name_click_action" value="nothing"> Do nothing</label>
   </div>
   <br>
   <div>
