--- a/extension/popup/index.html
+++ b/extension/popup/index.html
@@ -21,7 +21,7 @@
       </td>
     </tr>
   </template>
-  <h1 id="no-packages-found">Homebrew Finder</h1>
+  <h1>Homebrew Finder</h1>
   <p class="nocontent">
     Sorry, we were unable to find any packages for this website! &#x1F37B;
   </p>
@@ -45,5 +45,6 @@
     </thead>
     <tbody><tr><td></td><td></td></tr></tbody>
   </table>
+  <p class="nocontent settings-link"><a href="/options/index.html" target="_blank">Settings</a></p>
 </body>
 </html>
